--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>HTML</title>
-  
+  ù
   <!-- HTML -->
   
 
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <p>Welcome to edesh...</p>
+  <p>Welcome to edesh the place where you can find everything come and start your journey in shaa Allah..</p>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
