--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <h1>Welcome</h1>
   <p>Welcome to edesh the place where you can find everything come and start your journey in shaa Allah..</p>
   <!-- Project -->
   <script src="main.js"></script>
