--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>D3</title>
+  <title>Game| easy</title>
   
   <!-- D3 -->
   <script src="//cdn.jsdelivr.net/npm/d3@5.5.0/dist/d3.min.js"></script>
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
   <div id="panel">
     <form class="pure-form">
       <label>Patterns</label>
@@ -30,6 +31,19 @@
   <div class="svg-container" id="example" style="max-width: 960px"></div>
   
   <!-- Project -->
+  
+  <div class="mail">
+    <h2>Input an email and Submit</h2>
+    <form name="form1" action="#">
+      <ul>
+        <li><input type='text' name='text1' /></li>
+        <li>&nbsp;</li>
+        <li class="submit"><input type="submit" name="submit" value="Submit" onclick="ValidateEmail(document.form1.text1)" /></li>
+        <li>&nbsp;</li>
+      </ul>
+    </form>
+  </div>
+  
   <script src="index.js"></script>
 </body>
 </html>
