--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+     <img src="https://source.unsplash.com/user/erondu/1600x900">
   <div id="page_wrap">
     <main role="main" id="main">
       <div class="gif-header"><button id="button">Show me a cat!</button></div>
