--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact-map mt-30">
-                        <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=272%20west%20Agargaon%20&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div> <!-- row -->
                 </div>
             </div> <!-- row -->
